changed the RGB contrast, for a more natural looking dark mode